[project]
name = "pytorch-forecasting"
readme = "README.md"         # Markdown files are supported
version = "1.4.0"            # is being replaced automatically

authors = [
  {name = "Jan Beitner"},
]
requires-python = ">=3.9,<3.14"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
]
description = "Forecasting timeseries with PyTorch - dataloaders, normalizers, metrics and models"

dependencies = [
  "numpy<=3.0.0",
  "torch >=2.0.0,!=2.0.1,<3.0.0",
  "lightning >=2.0.0,<3.0.0",
  "scipy >=1.8,<2.0",
  "pandas >=1.3.0,<3.0.0",
  "scikit-learn >=1.2,<2.0",
]

[project.optional-dependencies]
# there are the following dependency sets:
# - all_extras - all soft dependencies
# - granular dependency sets:
#     - tuning - dependencies for tuning hyperparameters via optuna
#     - mqf2 - dependencies for multivariate quantile loss
#     - graph - dependencies for graph based forecasting
# - dev - the developer dependency set, for contributors to pytorch-forecasting
# - CI related: e.g., dev, github-actions. Not for users.
#
# soft dependencies are not required for the core functionality of pytorch-forecasting
# but are required by popular estimators, e.g., prophet, tbats, etc.

# all soft dependencies
#
# users can install via "pip install pytorch-forecasting[all_extras]"
#
all_extras = [
  "cpflows",
  "matplotlib",
  "optuna >=3.1.0,<5.0.0",
  "optuna-integration",
  "pytorch_optimizer >=2.5.1,<4.0.0",
  "statsmodels",
]

tuning = [
  "optuna >=3.1.0,<5.0.0",
  "optuna-integration",
  "statsmodels",
]

mqf2 = ["cpflows"]

# the graph set is not currently used within pytorch-forecasting
# but is kept for future development, as it has already been released
graph = ["networkx"]

# dev - the developer dependency set, for contributors to pytorch-forecasting
dev = [
  "pydocstyle >=6.1.1,<7.0.0",
  # checks and make tools
  "pre-commit >=3.2.0,<5.0.0",
  "invoke",
  "mypy",
  "pylint",
  "ruff",
  # pytest
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "pytest-sugar",
  "coverage",
  "pyarrow",
  # jupyter notebook
  "ipykernel",
  "nbconvert",
  "black[jupyter]",
  # documentatation
  "sphinx",
  "pydata-sphinx-theme",
  "nbsphinx",
  "recommonmark",
  "ipywidgets>=8.0.1,<9.0.0",
  "pytest-dotenv>=0.5.2,<1.0.0",
  "tensorboard>=2.12.1,<3.0.0",
  "pandoc>=2.3,<3.0.0",
  "scikit-base",
]

# docs - dependencies for building the documentation
docs = [
  "sphinx>3.2,<8.2.4",
  "pydata-sphinx-theme",
  "nbsphinx",
  "pandoc",
  "nbconvert",
  "recommonmark",
  "docutils",
]

github-actions = ["pytest-github-actions-annotate-failures"]

[tool.setuptools.packages.find]
exclude = ["build_tools"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=70.0.0",
]

[tool.ruff]
line-length = 88
exclude = [
  "docs/build/",
  "node_modules/",
  ".eggs/",
  "versioneer.py",
  "venv/",
  ".venv/",
  ".git/",
  ".history/",
  "docs/source/tutorials/",
]
target-version = "py39"

[tool.ruff.format]
# Enable formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C4", "S"]
extend-select = [
  "I", # isort
  "UP", # pyupgrade
  "C4", # https://pypi.org/project/flake8-comprehensions
]
extend-ignore = [
  "E203", # space before : (needed for how black formats slicing)
  "E402", # module level import not at top of file
  "E731", # do not assign a lambda expression, use a def
  "E741", # ignore not easy to read variables like i l I etc.
  "C406", # Unnecessary list literal - rewrite as a dict literal.
  "C408", # Unnecessary dict call - rewrite as a literal.
  "C409", # Unnecessary list passed to tuple() - rewrite as a tuple literal.
  "F401", # unused imports
  "S101", # use of assert
]

[tool.ruff.lint.isort]
known-first-party = ["pytorch_forecasting"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"pytorch_forecasting/data/timeseries.py" = [
  "E501", # Line too long being fixed in #1746 To be removed after merging
]

[tool.nbqa.mutate]
ruff = 1
black = 1

[tool.nbqa.exclude]
ruff = "docs/source/tutorials/" # ToDo: Remove this when fixing notebooks

[tool.coverage.report]
ignore_errors = false
show_missing = true

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]
addopts = [
    "-rsxX",
    "-vv",
    "--cov-config=.coveragerc",
    "--cov=pytorch_forecasting",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--no-cov-on-fail"
]
markers = []
testpaths = ["tests/", "pytorch_forecasting/tests/"]
log_cli_level = "ERROR"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
cache_dir = ".cache"
filterwarnings = [
    "ignore:Found \\d+ unknown classes which were set to NaN:UserWarning",
    "ignore:Less than \\d+ samples available for \\d+ prediction times. Use ba:UserWarning",
    "ignore:scale is below 1e-7 - consider not centering the data or using data with:UserWarning",
    "ignore:You defined a `validation_step` but have no `val_dataloader`:UserWarning",
    "ignore:ReduceLROnPlateau conditioned on metric:RuntimeWarning",
    "ignore:The number of training samples \\(\\d+\\) is smaller than the logging interval Trainer\\(:UserWarning",
    "ignore:The dataloader, [\\_\\s]+ \\d+, does not have many workers which may be a bottleneck.:UserWarning",
    "ignore:Consider increasing the value of the `num_workers` argument`:UserWarning",
    "ignore::UserWarning"
]
